added layer enable/disable based on whether a layer is available at the current map resolution | added inuit.css but excluded the base inuit project

--- a/.gitignore
+++ b/.gitignore
@@ -42,4 +42,12 @@ tmp
 *.sass-cache
 
 ### Project Ignores
+
+# ignore compiled js
 js/build/*
+
+# ignore inuit base files
+css/inuit.css/*
+
+# ignore compiled css
+css/*.css
